<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.chinamobile.android.connectionmanager.ui.CMEditText
        android:id="@+id/cmcc_old_psw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password_input_hint"
        android:inputType="textPassword"
        android:maxLength="10"
        android:singleLine="true"
        android:textSize="15sp" 
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textColor="#FF000000"
        android:textColorHint="@android:color/darker_gray"/>

    <com.chinamobile.android.connectionmanager.ui.CMEditText
        android:id="@+id/cmcc_new_psw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/new_password_input_hint"
        android:inputType="textPassword"
        android:maxLength="10"
        android:singleLine="true"
        android:textSize="15sp" 
        android:layout_marginTop="5dp"
        android:textColor="#FF000000"
        android:textColorHint="@android:color/darker_gray"
        />

    <com.chinamobile.android.connectionmanager.ui.CMEditText
        android:id="@+id/cmcc_confirm_new_psw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/new_password_confirm_input_hint"
        android:inputType="textPassword"
        android:maxLength="10"
        android:singleLine="true"
        android:textSize="15sp" 
        android:layout_marginTop="5dp"
        android:textColor="#FF000000"
        android:textColorHint="@android:color/darker_gray"/>
    
    <TextView 
        android:id="@+id/cmcc_psw_change_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_error"
        android:textSize="15sp"
        android:textColor="#ffff0000"
        android:visibility="invisible"
        />

</LinearLayout>